--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile 'com.google.firebase:firebase-messaging:9.0.2'
     compile 'com.google.firebase:firebase-database:9.0.2'
+    compile 'com.google.firebase:firebase-auth:9.0.2'
 
 }
